[package]
name = "rwhois"
version = "0.1.0"
authors = ["p <p@supr.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.0"
futures-util = "0.3.0"
tokio = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"
hashbrown = "0.6.3"
num_cpus = "1.11.1"
lazy_static = "1.4.0"
env_logger = "0.7.1"
log = "0.4.8"
